
NOTES on the Version:

// ---------------------------------------------------------------------

   0.44 --- RECEIPT VERIFICATION. Goes with the below change. Client-side
            receipts are now saved after every transaction, and verified
            whenever the account/inbox/outbox files are re-downloaded.

   0.43 --- BALANCE AGREEMENT / NO ACCOUNT HISTORY has been added!
            Just make sure you grab the outbox and inbox, and the account
            file, before doing a transaction, since they are needed
            for balance agreement, which is now operational and required.

   0.42 --- More bug fixes, plus added OT_API_CreateNym() (finally).

   0.41 --- Bug fixes in support of API, added various transaction
            types, receipt types, item types, to get full transfer
            receipt process working end-to-end.

   0.40 --- More additions to the API, plus many under-the-hood fixes.

   0.39 --- Continually updating the API based on developer feedback.

   0.38 --- Added Payment Plans, Markets, and Baskets to the API. Also
            added message buffer access to the API, so you can read all
            the server replies if you want to (or flush them...)

   0.37 --- Added build option DSP=1, for using custom builds of OpenSSL,
            and for turning off all the output logs.

   0.36 --- Top-level build targets added for API in Python, Ruby, PHP,
            and Perl!  It's now this easy to build the API:

            cd Open-Transactions
            make clean

           Then, from the same folder:

            make ruby
            make python
            make php5
            make perl5
     
           (More languages are supported, but for now these are the ones
           available at the top level.)    
 
   0.35 --- Huge additions to the API! See testwallet/OTAPI_funcdef.h
            for the complete interface, with NOTES above each function.
 
            That same interface is also wrapped by SWIG, and available