@@ -115,7 +115,7 @@ OT_MAKE := gmake
 
 SSL_INCLUDEDIRS = -I/usr/local/include
 SSL_LIBDIRS = -L/usr/local/lib
-#SSL_LIBDIRS = -L/usr/ports/security/openssl/work/openssl-1.0.0a
+#SSL_LIBDIRS = -L/usr/ports/security/openssl/work/openssl-1.0.0c
 
 endif
 
