@@ -4,8 +4,9 @@ NOTES on the Version:
 // ---------------------------------------------------------------------
 
    0.44 --- RECEIPT VERIFICATION. Goes with the below change. Client-side
-            receipts are now saved after every transaction, and verified
-            whenever the account/inbox/outbox files are re-downloaded.
+            receipts are now saved after every transaction, and whenever
+            account/inbox/outbox files are downloaded, they're verified
+            against the last signed receipt.
 
    0.43 --- BALANCE AGREEMENT / NO ACCOUNT HISTORY has been added!
             Just make sure you grab the outbox and inbox, and the account
